Issue #2944669 by yongt9412, miro_dietiker, Berdir, idebr: Add display: none to avoid flicker effect on behavior elements

--- a/css/paragraphs.widget.scss
+++ b/css/paragraphs.widget.scss
@@ -270,3 +270,8 @@
 .is-horizontal .paragraphs-tabs .tabs__tab {
   border-bottom: 0;
 }
+
+// Requires JavaScript to avoid flickering on pageload.
+.paragraphs-behavior {
+  display: none;
+}
